--- a/app/src/main/res/layout/activity_in_use.xml
+++ b/app/src/main/res/layout/activity_in_use.xml
@@ -163,7 +163,7 @@
         tools:ignore="MissingConstraints">
 
         <Button
-            android:id="@+id/btn_finish_operation"
+            android:id="@+id/btn_finish"
             android:layout_width="match_parent"
             android:layout_height="56dp"
             android:background="@drawable/bg_button_circle_green"
